--- a/style.css
+++ b/style.css
@@ -1,76 +1,77 @@
-.accordion {
-  display: block;
-  width: 100%;
-}
-
-.accordion__header {
-  width: 100%;
-}
-
 .accordion__button {
   position: relative;
-  display: flex;
-  align-items: center;
+  display: block;
   width: 100%;
-  padding-top: 1em;
-  padding-right: 16px;
-  padding-bottom: 1em;
-  padding-left: calc(16px + 1.5em);
-  font-size: 16px;
-  color: white;
-  background-color: #606060;
+  border: none;
+  padding: 0.75em 3em 0.75em 1em;
+  text-align: left;
+  font-size: 24px;
+  color: #ffffff;
+  background-color: #666666;
   cursor: pointer;
 }
 
-.accordion__button::before,
-.accordion__button::after {
+.accordion__button__toggle {
   position: absolute;
-  top: 50%;
-  left: 16px;
-  transform: translate(0, -50%);
+  top: 0;
+  inset: 0 1em 0 auto;
   display: block;
   width: 1em;
-  height: 1px;
-  content: '';
-  background-color: white;
-  transition: all 0.2s ease;
-}
+  margin: auto;
+  aspect-ratio: 1 / 1;
+  
+  &::before,
+  &::after {
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    display: block;
+    width: 100%;
+    height: 2px;
+    content: '';
+    background-color: white;
+    transition: all 0.2s ease;
+  }
 
-.accordion__button::before {
-  transform: translate(0, -50%);
-}
-
-.accordion__button::after {
-  transform: translate(0, -50%) rotate(90deg);
+  &::after {
+    rotate: 90deg;
+  }
 }
 
 .accordion__body {
+  overflow: hidden;
   visibility: hidden;
-  height: 0;
+  max-height: 0;
   opacity: 0;
-  transition: all 0.6s ease,
-    height 0.6s 0.2s ease;
+  background-color: #eeeeee;
+  transition: 
+    opacity 0.2s ease,
+    visibility 0s linear 0.2s,
+    max-height 0.6s ease;
 }
 
 .accordion__body__inner {
-  padding-top: 16px;
-  padding-right: 16px;
-  padding-bottom: 32px;
-  padding-left: 16px;
+  padding: 0.75em min(32px, 7.5%);
+  width: 100%;
 }
 
-.accordion.is-active .accordion__button::before {
-  transform: translate(0, -50%) rotate(90deg);
-  opacity: 0;
-}
+.accordion.is-active {
+  .accordion__button__toggle {
+    &::before {
+      rotate: 90deg;
+      opacity: 0;
+    }
+    &::after {
+      rotate: 180deg;
+    }
+  }
 
-.accordion.is-active .accordion__button::after {
-  transform: translate(0, -50%) rotate(180deg);
-}
-
-.accordion.is-active .accordion__body {
-  visibility: visible;
-  opacity: 1;
-  transition: all 0.6s 0.2s ease,
-    height 0.4s ease;
+  .accordion__body {
+    visibility: visible;
+    opacity: 1;
+    transition: 
+      opacity 0.2s ease,
+      visibility 0s linear,
+      max-height 0.6s ease;
+  }
 }
